test(all): add --headless option to firefox platform
Signed-off-by: Gavin Zhao <git@gzgz.dev>

--- a/tool/dart_test_repo.yaml
+++ b/tool/dart_test_repo.yaml
@@ -2,3 +2,8 @@ presets:
   ci:
     # Don't run any tests that are tagged ["fails-on-ci"].
     exclude_tags: "fails-on-ci"
+
+override_platforms:
+  firefox:
+    settings:
+      arguments: --headless
