--- a/ngast/pubspec.yaml
+++ b/ngast/pubspec.yaml
@@ -1,19 +1,20 @@
 name: ngast
 description: Parser and utilities for AngularDart templates
-version: 3.0.0-dev.0
+version: 3.0.0-dev.1
 repository: https://github.com/angulardart-community/angular
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  charcode: ^1.3.1
-  collection: ^1.17.0
-  meta: ^1.8.0
-  source_span: ^1.9.1
-  string_scanner: ^1.2.0
+  charcode: ^1.3.1 #updated
+  collection: ^1.18.0 #updated
+  meta: 1.11.0 #updated
+  source_span: ^1.10.0 #updated
+  string_scanner: ^1.2.0 #updated
 
 dev_dependencies:
   lints: ^2.0.1
   path: ^1.8.3
+  #test: ^1.24.9 #updated 
   test: ^1.22.2
