--- a/ngdart/pubspec.yaml
+++ b/ngdart/pubspec.yaml
@@ -2,24 +2,28 @@ name: ngdart
 description: >-
   Fast and productive web framework by Google.
   Separate, but similar to the JavaScript framework with a similar name.
-version: 8.0.0-dev.2
+version: 8.0.0-dev.3
 repository: https://github.com/angulardart-community/angular
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ^5.4.0
-  build: ^2.3.1
+  analyzer: 5.13.0 #5.12.0
+  build: ^2.4.0
   built_collection: ^5.1.1
-  build_modules: ^4.0.7
+  build_modules: '>=4.0.7 < 6.0.0'
   built_value: ^8.4.3
-  collection: ^1.17.0
+  collection: ^1.18.0
   intl: ^0.18.0
   js: ^0.6.5
-  meta: ^1.8.0
-  ngast: ^3.0.0-dev.0
-  ngcompiler: ^3.0.0-dev.1
+  meta: ^1.11.0
+  ngast: #^3.0.0-dev.0
+    path:
+      ../ngast
+  ngcompiler: #^3.0.0-dev.0
+    path:
+      ../ngcompiler      
   stream_transform: ^2.1.0
 
 dev_dependencies:
