--- a/experiments/pubspec.yaml
+++ b/experiments/pubspec.yaml
@@ -1,15 +1,10 @@
-name: ngdart
-description: >-
-  Fast and productive web framework by Google.
-  Separate, but similar to the JavaScript framework with a similar name.
-version: 8.0.0-dev.5
-repository: https://github.com/angulardart-community/angular
+name: example
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  analyzer: ^6.0.0 #5.13.0
+  analyzer: ^6.3.0 #5.12.0
   build: ^2.4.1
   built_collection: ^5.1.1
   #build_modules: '>=4.0.7 < 6.0.0'
@@ -20,7 +15,8 @@ dependencies:
   meta: ^1.11.0  
   stream_transform: ^2.1.0
   source_gen: ^1.4.0 #1.2.6
-  source_span: ^1.10.0 
+  source_span: ^1.10.0
+  mockito: any
   charcode: ^1.3.1 #updated
   string_scanner: ^1.2.0 #updated
   args: ^2.4.2
@@ -30,12 +26,15 @@ dependencies:
   logging: ^1.2.0
   path: ^1.8.3
   package_config: ^2.1.0
+  ngdart:
+    path:
+      ../
   
 dev_dependencies:
   async: ^2.10.0
-  build_runner: ^2.4.7
+  build_runner: ^2.4.6
   build_test: ^2.2.1
-  build_web_compilers: ^4.0.7
-  lints: ^2.1.0  
-  mockito: ^5.4.3  
+  build_web_compilers: ^4.0.6
+  lints: ^2.1.0
+  #mockito: 5.4.2  
   test: ^1.22.2
